--- a/XamlBrewer.Uwp.CoverFlowSample/MainPage.xaml
+++ b/XamlBrewer.Uwp.CoverFlowSample/MainPage.xaml
@@ -1,20 +1,35 @@
-﻿<Page
-    x:Class="XamlBrewer.Uwp.CoverFlowSample.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:XamlBrewer.Uwp.CoverFlowSample"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:XamlBrewer.Uwp.Controls"
-    mc:Ignorable="d">
+﻿<Page x:Class="XamlBrewer.Uwp.CoverFlowSample.MainPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:XamlBrewer.Uwp.CoverFlowSample"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:controls="using:XamlBrewer.Uwp.Controls"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <controls:CoverFlow x:Name="CoverFlow" >
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <controls:CoverFlow x:Name="CoverFlow"
+                            Grid.ColumnSpan="3"
+                            Margin="4">
             <controls:CoverFlow.ItemTemplate>
                 <DataTemplate>
                     <Image Source="{Binding}" />
                 </DataTemplate>
             </controls:CoverFlow.ItemTemplate>
         </controls:CoverFlow>
+        <Slider x:Name="Slider"
+                Value="{Binding SelectedIndex, ElementName=CoverFlow, Mode=TwoWay}"
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="0 4" />
     </Grid>
 </Page>
