--- a/XamlBrewer.Uwp.CoverFlowSample/MainPage.xaml
+++ b/XamlBrewer.Uwp.CoverFlowSample/MainPage.xaml
@@ -7,7 +7,7 @@
       xmlns:controls="using:XamlBrewer.Uwp.Controls"
       mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="Wheat">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
@@ -17,19 +17,67 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+
+        <!-- CoverFlow -->
         <controls:CoverFlow x:Name="CoverFlow"
                             Grid.ColumnSpan="3"
-                            Margin="4">
+                            Margin="8">
             <controls:CoverFlow.ItemTemplate>
                 <DataTemplate>
                     <Image Source="{Binding}" />
                 </DataTemplate>
             </controls:CoverFlow.ItemTemplate>
         </controls:CoverFlow>
+
+        <!-- Slider -->
         <Slider x:Name="Slider"
                 Value="{Binding SelectedIndex, ElementName=CoverFlow, Mode=TwoWay}"
                 Grid.Row="1"
                 Grid.Column="1"
-                Margin="0 4" />
+                Margin="0 8" />
+
+        <!-- Logo -->
+        <Viewbox Grid.RowSpan="2"
+                 VerticalAlignment="Bottom"
+                 HorizontalAlignment="Left"
+                 StretchDirection="DownOnly"
+                 Margin="8"
+                 Width="160">
+            <Canvas Height="80"
+                    Width="200"
+                    Background="Transparent">
+                <Canvas>
+                    <Viewbox Height="70"
+                             Canvas.Left="5"
+                             Canvas.Top="5">
+                        <Canvas Width="124"
+                                Height="240"
+                                Background="Transparent">
+                            <Path Width="116"
+                                  Height="236"
+                                  Margin="4 0 4 4"
+                                  Stretch="Fill"
+                                  Fill="LightSlateGray"
+                                  Data="F1 M 4869.77,-3633.83C 4870.14,-3633.18 4866.87,-3606.81 4867.34,-3603.82C 4867.81,-3600.82 4871.83,-3590.35 4871.83,-3584.36C 4871.83,-3574.77 4868.13,-3569.7 4865.19,-3561.36C 4863.32,-3556.07 4863.13,-3540.54 4862.94,-3538.77C 4862.76,-3536.99 4853.72,-3414.8 4852.97,-3411.99C 4852.22,-3409.19 4849.1,-3401.58 4843.86,-3401.33C 4838.63,-3401.08 4802.53,-3401.33 4809.36,-3401.33C 4816.18,-3401.33 4779.21,-3401.08 4773.98,-3401.33C 4768.74,-3401.58 4766.14,-3408.25 4765.74,-3411.99C 4765.44,-3414.88 4755.96,-3536.99 4755.77,-3538.77C 4755.58,-3540.54 4755.39,-3556.07 4753.52,-3561.36C 4750.58,-3569.7 4746.89,-3574.77 4746.89,-3584.36C 4746.89,-3590.35 4750.91,-3600.82 4751.37,-3603.82C 4751.84,-3606.81 4748.57,-3633.18 4748.94,-3633.83C 4749.32,-3634.49 4750.81,-3634.49 4750.81,-3634.49" />
+                        </Canvas>
+                    </Viewbox>
+                </Canvas>
+                <Grid Width="200"
+                      Height="80">
+                    <TextBlock Foreground="IndianRed"
+                               FontSize="24"
+                               FontWeight="SemiBold"
+                               VerticalAlignment="Bottom"
+                               Padding="0"
+                               Margin="48 0 8 12">
+                                    <Run Text="XAML" />
+                                    <Run Text="Brewer"
+                                         Foreground="LightSlateGray"
+                                         FontWeight="Light" />
+                    </TextBlock>
+                </Grid>
+            </Canvas>
+        </Viewbox>
+
     </Grid>
 </Page>
